--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "axios": "^0.24.0",
     "bulma-pageloader": "^2.1.0",
     "chart.js": "^2.7.3",
     "chartjs-plugin-zoom": "^0.7.4",
@@ -13,7 +14,7 @@
     "react-detect-offline": "^2.1.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^4.0.3",
     "react-sparklines": "^1.7.0",
     "react-timeago": "^4.1.9",
     "reactbulma": "3.0.4"
